css color redesigned
Things added:
- font
- some bootstrap override (e.g. navbar)
- three different contentbox
- pageheader, footer

still needs to clean up unused, changing id, class referrence.

--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -43,6 +43,7 @@
     url('../fonts/Quark-Light.otf') format('opentype');
 }
 
+
 /*********************************************
   HEADINGS, p, a, input
 **********************************************/
@@ -52,12 +53,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bolder;
 }
 
-h1 {  font-size: 48px !important; }  
-h2 {  font-size: 40px !important; }  
-h3 {  font-size: 36px !important; }  
-h4 {  font-size: 32px !important; }  
-h5 {  font-size: 28px !important; }  
-h6 {  font-size: 26px !important; }  
+h1 {  font-size: 48px; }  
+h2 {  font-size: 40px; }  
+h3 {  font-size: 36px; }  
+h4 {  font-size: 32px; }  
+h5 {  font-size: 28px; }  
+h6 {  font-size: 26px; }  
 
 p {
   font-family:    'saraban', sans-serif;
@@ -65,7 +66,7 @@ p {
   font-size:      20px !important;
   line-height:    26px;
   letter-spacing: 0.4px;
-  color:          #ffffff;
+  color:          #121c1e;
 
   padding:        0;
   margin-top:     10px;
@@ -133,16 +134,68 @@ input[type=submit],input[type=text],input[type=email] {
 .form-group input[type=email] {  height: 100%;  }
 
 
-
-
-
 /*********************************************
-  FOOTERS - Appears every page
+  Content 
 **********************************************/
 
+.contentbox-bgwhite {
+  background: #ffffff;
+  color: #121c1e;
+}
 
-#footerwrap { background: #121c1e; }
-#footerwrap p { color: #ffffff; }
+/* Testimonial, Service */
+.contentbox-bginversed {
+  background: #212b32;
+  color: #ffffff;
+}
+
+/* Music Collection */
+.contentbox-bggrey {
+  background: #efefef;
+  color: #121c1e;
+
+  text-align: center;
+
+  padding-top: 30px;
+}
+
+#testimonial { background: #212b32; }
+
+  #testimonial h1,#testimonial h2,#testimonial h3,
+  #testimonial h4,#testimonial h5,#testimonial h6 {
+    font-family: 'quark', sans-serif;
+    font-weight: bolder;
+    text-align: center;
+  }
+
+  #testimonial p, #testimonial small {
+    font-family: 'quark', sans-serif;
+    font-weight: light;
+  }
+
+  #testimonial h1, #testimonial h2 { color: #ffffff; }
+
+  #testimonial h3, #testimonial h4,
+  #testimonial h5, #testimonial h6 { 
+    color: #121c1e; 
+  }
+
+
+/* @quote: Quote section */
+
+#quote { background: #35d9f9; }
+
+  #quote h1,#quote h2,#quote h3,
+  #quote h4,#quote h5,#quote h6,
+  #quote p, #quote small {
+    font-family: 'quark', sans-serif;
+    font-weight: bolder;
+  }
+
+  #quote p, #quote small { font-weight: light; }
+
+  #quote h1, #quote h2 { color: #ffffff; }
+  #quote h3, #quote h4, #quote h5, #quote h6 { color: #121c1e; }
 
 
 
@@ -177,34 +230,55 @@ ORIGINAL THEME OVERRIDE
     font-size: 20px;
   }
 
+  .navbar-default .navbar-collapse, 
+  .navbar-default .navbar-form {
+      border-color: #35d9f9;
+  }
+
 
 
 
 
 /*********************************************
-  Page header meta 
+  FOOTERS - Appears every page
+**********************************************/
+
+
+#footerwrap { background: #121c1e; }
+#footerwrap p { color: #ffffff; }
+
+
+
+
+
+/*********************************************
+  @pageheader :Page header meta 
     - header for non landing/home page
 **********************************************/
+
 
 #pageheader {
   background: #121c1e;
   color: #35d9f9;
   margin-top: 70px;
   margin-bottom: 70px;
-  padding: 25px 0 25px 15px;
+  padding: 25px 0;
 }
 
-#pageheader-title { padding-left: 15px; }
-#pageheader-meta  { }
+  #pageheader .page-title, 
+  #pageheader .post-title { 
+    margin-left: 15px; 
+  }
+
 
 /* media queries must defined after default values or it's not working */
 
 @media all and (min-width: 768px) and (max-width: 991px) {
-  #subheader  { margin-top: 100px; }
+  #pageheader  { margin-top: 100px; }
 }
 
 @media all and (max-width: 300px) {
-  #subheader  { margin-top: 100px; }
+  #pageheader  { margin-top: 100px; }
 }
 
 
@@ -215,14 +289,14 @@ ORIGINAL THEME OVERRIDE
   Homepage (or Landing page)
 **********************************************/
 
-#headerwrap     { background: #121c1e;  }
+#headerwrap { background: #121c1e;  }
 
   #headerwrap h1, #headerwrap h2, #headerwrap h3,
   #headerwrap h4, #headerwrap h5, #headerwrap h6 { 
     color: #35d9f9; 
   }
 
-  #headerwrap p   { color: #ffffff; }
+  #headerwrap p { color: #ffffff; }
 
 
   .laptop-teaser {
@@ -231,27 +305,19 @@ ORIGINAL THEME OVERRIDE
     border-radius: 15px !important;
   }
 
-/* Quote section */
 
-#quote h1,#quote h2,#quote h3,
-#quote h4,#quote h5,#quote h6,
-#testimonial h1,#testimonial h2,#testimonial h3,
-#testimonial h4,#testimonial h5,#testimonial h6 {
-  font-family: 'quark', sans-serif;
-  font-weight: bold;
+/*music collection GRID*/
+
+#musiccollection-container {
+  background: #efefef;
+  color: #121c1e;
 }
 
-#quote p, #quote small,
-#testimonial p, #testimonial small {
-  font-family: 'quark', sans-serif;
-  font-weight: light;
-}
+  #musiccollection-container h3 { color: #121c1e; }
+  #musiccollection-container p  { color: #121c1e; }
 
-/* Motion Square Music introduction*/
-/*Content section 01:*/
-.msm-contentinfomation p { color:#121c1e; }
-
-/*GRID ITEM: music collection GRID*/
+/*<sections>*/
+#musiccollections { margin-top: 30px; }
 
 #portfoliowrap {
   background: #efefef;
@@ -262,7 +328,7 @@ ORIGINAL THEME OVERRIDE
   #portfoliowrap p  { color: #121c1e; }
 
 
-  .musiccollection{
+  .musiccollection {
     position: relative;
     overflow: hidden;
     display: inline-block;
@@ -271,34 +337,34 @@ ORIGINAL THEME OVERRIDE
     transition: all 1s ease-in-out;
   }
 
-.musiccollection .musiccollection-text{
-  position: absolute;
-  bottom: 0;
-  z-index: -1;
-}
-  .musiccollection:hover .musiccollection-text{
-    z-index: 1;
-    display: inline;
+  .musiccollection .musiccollection-text {
     position: absolute;
-    top: 0;
-    left: 0;
     bottom: 0;
-    right: 0;
-
-    line-height: 10;
-    text-align: center;
-    font-size: 36px;
-    color:rgb(37, 93, 118);
-
-    background: #ffffff;
-    opacity: .8;
+    z-index: -1;
   }
+    .musiccollection:hover .musiccollection-text {
+      z-index: 1;
+      display: inline;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+
+      line-height: 10;
+      text-align: center;
+      font-size: 36px;
+      color:rgb(37, 93, 118);
+
+      background: #ffffff;
+      opacity: .8;
+    }
 
   /* music collection modal*/
 
   #portfolio-modal-infographics,
   #portfolio-modal-altrock,
-  #portfolio-modal-altrock{
+  #portfolio-modal-altrock {
     display: none; 
   }
 
@@ -378,10 +444,10 @@ ORIGINAL THEME OVERRIDE
   BLOGS & SINGLE BLOGS
 **********************************************/
 
-
+/* SIDE MENU BAR */
 aside>div { margin-bottom: 20px; }
 
-
+.post-meta { color:#ffffff; }
 .post-meta a:hover { color:#ffffff; }
 
 
