--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,10 +227,7 @@ a:focus {
 }
 
 /* Services Wrap */
-#service {
-    margin-top: 100px;
-    margin-bottom: 80px;
-}
+#service {}
 
 
 /* Portfolio Wrap */
