--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div id="blue">
+<div id="pageheader">
   <div class="container">
     <div class="row">
       <header class="post-header">
@@ -16,7 +16,7 @@ layout: default
   <div class="container mtb">
     <div class="row">
       <!-- Blog content -->
-      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-12">
+      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
         <article class="post-content">
           {{ content }}
         </article>
@@ -27,7 +27,7 @@ layout: default
       </div>
       
       <!-- Sidebar -->
-      <div class="col-lg-4 col-md-4 col-sm-2 col-xs-12">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <aside>
           {% include sidebar.html %}
         </aside>
