--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -2,13 +2,6 @@
 	Global elements override
 **********************************************/
 
-@media all and (min-width: 768px) and (max-width: 991px) {
-  #blue { margin-top: 100px; }
-}
-
-@media all and (max-width: 300px) {
-  #blue { margin-top: 100px; }
-}
 
 /* Utilities */
 
@@ -266,7 +259,7 @@ ORIGINAL THEME OVERRIDE
 
 
 #pageheader {
-  background: #121c1e;
+  background: url(../img/theme/blur-bg-menu.jpg) no-repeat center right;
   color: #35d9f9;
   margin-top: 70px;
   margin-bottom: 70px;
@@ -297,7 +290,7 @@ ORIGINAL THEME OVERRIDE
   Homepage (or Landing page)
 **********************************************/
 
-#headerwrap { background: #121c1e;  }
+#headerwrap { background: url(../img/theme/blur-bg.jpg) no-repeat center top; }
 
   #headerwrap h1, #headerwrap h2, #headerwrap h3,
   #headerwrap h4, #headerwrap h5, #headerwrap h6 { 
