--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -447,7 +447,23 @@ ORIGINAL THEME OVERRIDE
   SERVICES
 **********************************************/
 
-
+/*background: url(../img/t-back2.jpg) no-repeat center top;*/
+#customcollection-background {
+  background: url(../img/services/customcol.jpg) no-repeat center top;
+  background-size: cover;
+}
+#loopmusic-background {
+  background: url(../img/services/loopmusic.jpg) no-repeat center top;
+  background-size: cover;
+}
+#mockupscore-background {
+  background: url(../img/services/mockup.jpg) no-repeat center top;
+  background-size: cover;
+}
+#stockmusic-background {
+  background: url(../img/services/stock.jpg) no-repeat center top;
+  background-size: cover;
+}
 
 
 
