css properties changed for new thai fonts

--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -103,11 +103,9 @@ a:hover, a:focus {
 
 input[type=submit],input[type=text],input[type=email] {
   font-family:  'cadson', sans-serif;
-  font-size:    20px;
 }
 
 h1, h2, h3, h4 {
-  font-family:  'cadson', sans-serif;
   margin: 1.414em 0 0.5em;
   font-weight: 600;
   line-height: 1.2;
@@ -121,6 +119,8 @@ h1 {
 h2 {font-size: 4.236em;}
 h3 {font-size: 2.618em;}
 h4 {font-size: 1.618em;}
+
+h1, h2, h3, h4, h5, h6 { font-family: 'cadson', sans-serif; }
 
 small, .font_small {font-size: 0.618em;}
 
@@ -307,13 +307,13 @@ ORIGINAL THEME OVERRIDE
   .navbar-brand {
     font-family: 'cadson', sans-serif;
     font-weight: 900;
-    font-size: 30px !important;
+    /*font-size: 30px !important;*/
   }
 
   .navbar-default .navbar-nav > li > a {
     color: #ffffff;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .navbar-default .navbar-collapse,
@@ -381,7 +381,7 @@ ORIGINAL THEME OVERRIDE
 **********************************************/
 
 #headerwrap {
-  background: url(../img/theme/blur-bg.jpg) no-repeat center top; 
+  background: url(../img/theme/blur-bg.jpg) no-repeat center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
